--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,86 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+
+
+
+
+
+
+
+
+
+
+
+.todo-card:hover{
+  transform: scale(1.01);
+  cursor: pointer;
+}
+.remove{
+  padding: 10px;
+  background-color: rgb(111, 197, 111);
+  width: 40% !important;
+}
+.todo{
+  padding: 10px;
+  background-color: #deb16f;
+  width: 40% !important;
+}
+.contain{
+  display: flex;
+  width: 95%;
+  margin: auto;
+  justify-content: space-between;
+}
+.todo-icons{
+  margin: 0px 5px;
+  cursor: pointer;
+}
+.todo-icons:hover{
+ transform: scale(1.2);
+}
+.todo-card{
+  width: 90%;
+  height: 50px;
+  background-color: #73e286;
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  font-weight: 600;
+  padding: 0px 10px;
+}
+.todos{
+  display: flex;
+  margin: auto;
+  justify-content: space-evenly;
+  width: 90%;
+  flex-wrap: wrap;
+  margin-top: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+
+.form_input:focus {
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.5);
+
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.submit_button:active{
+    transform: scale(0.9);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app {
+  background-color: #2f74c0;
+  height: 100vh;
+  width: 100vw;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@media (max-width:700px){
+  .contain{
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .todo{
+    width: 100% !important;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .remove{
+    width: 100% !important;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
